--- a/home/Templates/about.html
+++ b/home/Templates/about.html
@@ -1,5 +1,6 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
+{% block title %} <title>About</title> {% endblock %}
 
-{ % block start%}
-   <h1> Hello world</h1>
-{ %end block%}
+{% block start%}
+<h2> This is About page</h2>
+{% endblock%}
