--- a/home/Templates/index.html
+++ b/home/Templates/index.html
@@ -1,5 +1,10 @@
 {% extends 'base.html'%}
 
-{ % block start%}
-   <h1> Hello world</h1>
-{ %end block%}
+{% block start  %}
+<div style="margin: 5px;">
+   <form action="" method="post">
+      <input type="text">
+   </form>
+   <center> <button>SignUp/Register</button></center>
+</div>
+{% endblock %}
