--- a/home/Templates/profile.html
+++ b/home/Templates/profile.html
@@ -1,6 +1,8 @@
-{% extends 'base.html'%}
-{% block title %} <title>Profile</title> {% endblock %}
+{% extends 'base.html' %}
 
-{% block start%}
-<h2> This is Profile page</h2>
-{% endblock%}
+{% block title %}
+<title>Profile</title>
+{% endblock %}
+{% block start %}
+{{ students}}
+{% endblock %}
