query not found

--- a/home/Templates/profile.html
+++ b/home/Templates/profile.html
@@ -4,5 +4,7 @@
 <title>Profile</title>
 {% endblock %}
 {% block start %}
-{{ students}}
+{% for student in students%}
+{{ student.name}}
+{% endfor%}
 {% endblock %}
