get data from backend

--- a/home/Templates/signup.html
+++ b/home/Templates/signup.html
@@ -214,9 +214,26 @@ input[type="submit"]:active
 
     <div class="inputBox"> 
 
-     <input type="text" required name="name"> <i>Username</i> 
+     <input type="text" required name="name"> <i>Full Name</i> 
 
-    </div> 
+    </div>
+    <div class="inputBox"> 
+
+      <input type="text" required name="email"> <i>email</i> 
+ 
+     </div> 
+     <div class="inputBox"> 
+
+      <input type="text" required name="bio"> <i>Bio</i> 
+ 
+     </div> 
+     <div class="inputBox"> 
+
+      <input type="number" required name="phone"> <i>Phone No</i> 
+ 
+     </div> 
+ 
+ 
 
     <div class="inputBox"> 
 
