--- a/home/Templates/profile.html
+++ b/home/Templates/profile.html
@@ -3,8 +3,28 @@
 {% block title %}
 <title>Profile</title>
 {% endblock %}
+
 {% block start %}
-{% for student in students%}
-{{ student.name}}
-{% endfor%}
+<h1>Profile</h1>
+<h2>Registered Students</h2>
+<table border="2">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Bio</th>
+            <th>Phone No</th>
+            <th>Email</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for student in students %}
+            <tr>
+                <td>{{ student.name }}</td>
+                <td>{{ student.bio }}</td>
+                <td>{{ student.phone }}</td>
+                <td>{{ student.email }}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
