--- a/home/Templates/profile.html
+++ b/home/Templates/profile.html
@@ -7,14 +7,15 @@
 {% block start %}
 <h1>Profile</h1>
 <h2>Registered Students</h2>
-<table border="2">
+<table border="3" style="margin: 5px; padding: 5px;">
     <thead>
-        <tr>
+        <tr >
             <th>Name</th>
             <th>Bio</th>
             <th>Phone No</th>
             <th>Email</th>
             <th>Image</th>
+            <th> Action</th>
         </tr>
     </thead>
     <tbody>
@@ -24,7 +25,10 @@
                 <td>{{ student.bio }}</td>
                 <td>{{ student.phone }}</td>
                 <td>{{ student.email }}</td>
-                <td > <img src="/media/{{ student.image}}" alt="" srcset="" style="height: 20%; width: 20%;"> </td>
+                <td > <img src="/media/{{ student.image}}" alt="Profile" srcset="" style=" width: 15%;"> </td>
+                <td> <button> Delete</button>
+                    <button> Update</button>
+                </td>
             </tr>
         {% endfor %}
     </tbody>
