--- a/home/Templates/profile.html
+++ b/home/Templates/profile.html
@@ -28,6 +28,7 @@
                 <td > <img src="/media/{{ student.image}}" alt="Profile" srcset="" style=" width: 15%;"> </td>
                 <td> 
                     <a href="/delete-student/{{ student.id}}"> delete</a>
+                    <a href="/update-student/{{student.id}}">Update</a>
                 </td>
             </tr>
         {% endfor %}
