--- a/home/Templates/index.html
+++ b/home/Templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 
 {% block start  %}
-<div style="margin: 5px;">
-   <center> <button>SignUp/Register</button></center>
-</div>
+<center style="margin: 20%;"> 
+   <button> <a href="/add/">Add your Data</a> </button>
+</center>
 {% endblock %}
