logout and session successfull

--- a/home/Templates/about.html
+++ b/home/Templates/about.html
@@ -2,5 +2,5 @@
 {% block title %} <title>About</title> {% endblock %}
 
 {% block start%}
-<h2> This is About page</h2>
+<h2>Hello this is my account {{request.user.first_name}} {{request.user.last_name}} </h2>
 {% endblock%}
