--- a/home/Templates/index.html
+++ b/home/Templates/index.html
@@ -2,6 +2,6 @@
 
 {% block start  %}
 <center style="margin: 20%;"> 
-   <button> <a href="/add/">Add your Data</a> </button>
+   <button  type="button" class="btn btn-primary"> <a href="/add/" style="color: white;">Add your Data</a> </button>
 </center>
 {% endblock %}
