--- a/home/Templates/profile.html
+++ b/home/Templates/profile.html
@@ -6,7 +6,7 @@
 
 {% block start %}
 <h1>{{request.user.first_name}} {{request.user.last_name}}</h1>
-<h2>Registered Students</h2>
+<h2>Registered Students Intern</h2>
 <table class="table table-hover table-sm table-bordered" >
     <thead class="thead-dark">
         <tr >
