--- a/home/Templates/AddData.html
+++ b/home/Templates/AddData.html
@@ -54,7 +54,7 @@
                       </div>
                     <div class="links" style="margin-bottom: 15px;"> Dont have an account yet? <a href="#" style="color: blue;">Add Data</a> </div> 
                     <div class="inputBox"> 
-                        <input type="submit" value="Register" style="width: 100%; padding: 10px; border: none; border-radius: 5px; background-color: #4CAF50; color: white; cursor: pointer;"> 
+                        <input type="submit" value="Add" style="width: 100%; padding: 10px; border: none; border-radius: 5px; background-color: #4CAF50; color: white; cursor: pointer;"> 
                     </div> 
                 </div>
             </form>
